--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,6 @@
-include "AutoComplete", "RSyntaxTextArea"
+
 rootProject.name = 'LuaAutoComplete'
+
+include "AutoComplete", "RSyntaxTextArea"
+project(':AutoComplete').projectDir = new File(settingsDir, '../AutoComplete')
+project(':RSyntaxTextArea').projectDir = new File(settingsDir, '../RSyntaxTextArea')
