--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,14 @@ antlr4 {
 
 repositories {
     mavenCentral()
-    jcenter()
+    
+    // hopefully fixes #1 (https://github.com/turpid-monkey/LuaCompletionProvider/issues/1)
+    // jcenter()
+    maven {
+        name 'jcenter'
+        url  'http://jcenter.bintray.com'
+    }
+    
     // You may define additional repositories, or even remove "mavenCentral()".
     // Read more about repositories here:
     //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:repositories
