Fix for issue #3 (https://github.com/turpid-monkey/LuaCompletionProvider/issues/3)

--- a/build.gradle
+++ b/build.gradle
@@ -57,9 +57,14 @@ dependencies {
     // TODO: Add dependencies here ...
     // You can read more about how to add dependency here:
     //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
-    //testCompile group: 'junit', name: 'junit', version: '4.10'
+    testCompile group: 'junit', name: 'junit', version: '4.10'
     //compile files("./lib/antlr-runtime-4.4.jar","../RSyntaxTextArea/build/libs/RSyntaxTextArea-2.5.4.jar", "../AutoComplete/build/libs/AutoComplete-2.5.4.jar")
 
+    compile (group: 'org.antlr', name: 'antlr4', version: '4.2')
+    compile (group: 'org.antlr', name: 'antlr4', version: '4.2', classifier: 'sources')
+
+    compile 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
+    
     compile project(':AutoComplete')
     compile project(':RSyntaxTextArea')
 }
