--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.1'
+}
+
 compileJava {
    
 }
