--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'me.champeau.gradle.antlr4'
+apply plugin: 'com.github.jacobono.jaxb'
 
 jar.dependsOn compileJava
-compileJava.dependsOn antlr4
+compileJava.dependsOn antlr4 
 
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
@@ -54,6 +55,7 @@ buildscript {
 
     dependencies {
         classpath 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
+        classpath 'org.gradle.jacobo.plugins:gradle-jaxb-plugin:1.3.4'
     }
 }
 
