--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'me.champeau.gradle.antlr4'
 apply plugin: 'com.github.jacobono.jaxb'
+apply plugin: 'git-dependencies'
 
 jar.dependsOn compileJava
 compileJava.dependsOn antlr4 
@@ -30,7 +31,7 @@ repositories {
         name 'jcenter'
         url  'http://jcenter.bintray.com'
     }
-    
+
     // You may define additional repositories, or even remove "mavenCentral()".
     // Read more about repositories here:
     //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:repositories
@@ -54,6 +55,7 @@ buildscript {
     dependencies {
         classpath 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
         classpath 'org.gradle.jacobo.plugins:gradle-jaxb-plugin:1.3.4'
+        classpath 'org.batcha.gradle.plugins:git-dependencies:0.2'
     }
 }
 
@@ -68,6 +70,6 @@ dependencies {
 
     compile 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
     
-    compile project(':AutoComplete')
-    compile project(':RSyntaxTextArea')
+    compile('com.fifesoft:rsyntaxtextarea:2.5.4').ext.git = 'https://github.com/bobbylight/RSyntaxTextArea.git'
+    compile('com.fifesoft:autocomplete:2.5.4').ext.git = 'https://github.com/bobbylight/AutoComplete.git'
 }
