--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
     - TERM=dumb ./gradlew --refresh-dependencies --stacktrace
 
 script:
-    - TERM=dumb ./gradlew build --stacktrace
+    - TERM=dumb ./gradlew build
 
 after_failure:
   - "cat ./build/test-results/*.xml"
