Support for Maven local deployment.

--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ uploadArchives {
 				project {
 					
 					groupId 'org.mism.forfife'
-					artifactId 'luautocomplete'
+					artifactId 'luaautocomplete'
 					packaging 'jar'
 					version '0.0.1'
 					
