--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
 language: java
 jdk:
   - oraclejdk8
-  
-before_install:
-  - "export DISPLAY=:99.0"
-  - "export TERM=dumb"
-  - "sh -e /etc/init.d/xvfb start"
 
 install:
-    - TERM=dumb ./gradlew --refresh-dependencies --stacktrace
+  - ./gradlew --refresh-dependencies --stacktrace
 
 script:
-    - TERM=dumb ./gradlew build
+  - ./gradlew build
+
+after_success:
+  - ./gradlew cobertura coveralls
 
 after_failure:
   - "cat ./build/test-results/*.xml"
