--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'me.champeau.gradle.antlr4'
 apply plugin: 'com.github.jacobono.jaxb'
 apply plugin: 'git-dependencies'
 apply plugin: 'maven'
+apply plugin: 'cobertura'
+apply plugin: 'com.github.kt3k.coveralls'
 
 version = 0.1
 
@@ -26,6 +28,8 @@ antlr4 {
     
     extraArgs =['-package','org.mism.forfife.lua']
 }
+
+cobertura.coverageFormats = ['html', 'xml']
 
 repositories {
     mavenCentral()
@@ -59,6 +63,8 @@ buildscript {
         classpath 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
         classpath 'org.gradle.jacobo.plugins:gradle-jaxb-plugin:1.3.4'
         classpath 'org.batcha.gradle.plugins:git-dependencies:0.2'
+        classpath 'net.saliman:gradle-cobertura-plugin:2.0.0' // cobertura plugin
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
     }
 }
 
