--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'me.champeau.gradle.antlr4'
 apply plugin: 'com.github.jacobono.jaxb'
 apply plugin: 'git-dependencies'
 apply plugin: 'maven'
-apply plugin: 'cobertura'
+apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 
 version = 0.1
@@ -29,7 +29,12 @@ antlr4 {
     extraArgs =['-package','org.mism.forfife.lua']
 }
 
-cobertura.coverageFormats = ['html', 'xml']
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
+    }
+}
 
 repositories {
     mavenCentral()
@@ -63,7 +68,6 @@ buildscript {
         classpath 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
         classpath 'org.gradle.jacobo.plugins:gradle-jaxb-plugin:1.3.4'
         classpath 'org.batcha.gradle.plugins:git-dependencies:0.2'
-        classpath 'net.saliman:gradle-cobertura-plugin:2.0.0' // cobertura plugin
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
     }
 }
