--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'java'
 apply plugin: 'me.champeau.gradle.antlr4'
 apply plugin: 'com.github.jacobono.jaxb'
-apply plugin: 'git-dependencies'
 apply plugin: 'maven'
 apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 
 version = 0.1
+group = 'org.mism.forfife'
 
 jar.dependsOn compileJava
 compileJava.dependsOn antlr4 
@@ -39,6 +39,8 @@ jacocoTestReport {
 repositories {
     mavenCentral()
     
+    mavenLocal()
+    
     maven {
         name 'jcenter'
         url  'http://jcenter.bintray.com'
@@ -67,51 +69,10 @@ buildscript {
     dependencies {
         classpath 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
         classpath 'org.gradle.jacobo.plugins:gradle-jaxb-plugin:1.3.4'
-        classpath 'org.batcha.gradle.plugins:git-dependencies:0.2'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
     }
 }
 
-uploadArchives {
-	repositories {
-		mavenDeployer {
-			repository(url: 'file:///' + projectDir + '/../localMavenRepo')
-			beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-			pom {
-				groupId = 'org.mism.forfife'
-				name = 'luaautocomplete'
-				project {
-					
-					groupId 'org.mism.forfife'
-					artifactId 'luaautocomplete'
-					packaging 'jar'
-					version '0.1'
-					
-					name 'LuaAutoComplete'
-					description 'LuaAutoComplete is a context-sensitive completion provider implementation for RSyntaxTextArea.'
-					
-					inceptionYear '2014'
-					url 'https://github.com/turpid-monkey/LuaAutoComplete'
-
-					// Manually add runtime dependencies since we don't have
-					// a multi-project build set up properly
-					dependencies {
-						dependency {
-							groupId 'com.fifesoft'
-							artifactId 'autocomplete'
-							version '2.5.4'
-						}
-						dependency {
-							groupId 'com.fifesoft'
-							artifactId 'rsyntaxtextarea'
-							version '2.5.4'
-						}
-					}
-				}
-			}
-		}
-	}
-}
 dependencies {
     
     testCompile group: 'junit', name: 'junit', version: '4.10'
@@ -119,6 +80,6 @@ dependencies {
     compile (group: 'org.antlr', name: 'antlr4', version: '4.2')
     compile (group: 'org.antlr', name: 'antlr4', version: '4.2', classifier: 'sources')
 
-    compile('com.fifesoft:rsyntaxtextarea:2.5.4').ext.git = 'https://github.com/bobbylight/RSyntaxTextArea.git'
-    compile('com.fifesoft:autocomplete:2.5.4').ext.git = 'https://github.com/bobbylight/AutoComplete.git'
+    compile('com.fifesoft:rsyntaxtextarea:2.5.4')
+    compile('com.fifesoft:autocomplete:2.5.4')
 }
