--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ buildscript {
 dependencies {
     
     testCompile group: 'junit', name: 'junit', version: '4.10'
+    testCompile group: 'org.easymock', name: 'easymock', version: '3.3'
     
     compile (group: 'org.antlr', name: 'antlr4', version: '4.2')
     compile (group: 'org.antlr', name: 'antlr4', version: '4.2', classifier: 'sources')
