--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: java
+env:
+  BINTRAYAPIKEY:
+    secure: "WDFqZzHdGP6ROriHhHklI8OPuFKQfrtsyzmVzex2A0FoF81td20JoUpElnK8JyVLzIrI8/VronoUZB8gEHEmaNJbsO1pNqcndem4tMwJssCL+BjE7zKKKJScfdvK9KWCAfzYqsJIjilfIAAwr8GqjxT4hljpKTJLxoqRl0CeUCc="
+
 jdk:
   - oraclejdk8
 
@@ -6,7 +10,7 @@ install:
   - ./gradlew --refresh-dependencies --stacktrace
 
 script:
-  - ./gradlew build
+  - ./gradlew build artifactoryPublish
 
 after_success:
   - ./gradlew jacocoTestReport coveralls
