--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,25 @@ apply plugin: 'maven-publish'
 apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'eclipse'
-apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.jfrog.artifactory'
 
-version = '0.1'
+version = '0.2-SNAPSHOT'
 group = 'edu.gcsc.lua'
+
+if (System.env['TRAVIS'] != null) {
+    project.ext.set ("buildInfo.build.number", System.env.TRAVIS_BUILD_NUMBER)
+    project.ext.set ("buildInfo.build.name", System.env.TRAVIS_BUILD_ID)
+} else {
+    project.ext.set ("buildInfo.build.number", '0' )
+    project.ext.set ("buildInfo.build.name", rootProject.name+"-local")
+}
+
 
 jar.dependsOn compileJava
 compileJava.dependsOn antlr4 
 
 sourceCompatibility = '1.6'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
-
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.1'
@@ -43,30 +51,6 @@ jacocoTestReport {
     reports {
         xml.enabled = true // coveralls plugin depends on xml format report
         html.enabled = true
-    }
-}
-
-bintray {
-    user = "turpid-monkey"
-    key = ""
-    publications = ['mavenJava'] 
-    publish = true
-    pkg {
-        repo = 'maven'
-        name = 'edu.gcsc.lua'
-        desc = 'A library to generate auto-completion proposals from LUA scripts.'
-        websiteUrl = 'https://github.com/turpid-monkey/LuaAutoComplete'
-        issueTrackerUrl = 'https://github.com/turpid-monkey/LuaAutoComplete/issues'
-        vcsUrl = 'https://github.com/turpid-monkey/LuaAutoComplete.git'
-        licenses = ['BSD 2-clause']
-        labels = ['lua', 'auto-completion']
-        attributes= ['plat': ['linux', 'osx', 'windows']]
-        publicDownloadNumbers = true
-        version {
-            name = '0.1' //Optional logical version name
-            desc = 'alpha-version'
-            vcsTag = 'master'
-        }
     }
 }
 
@@ -107,12 +91,17 @@ buildscript {
             name 'jcenter'
             url  'http://jcenter.bintray.com'
         }
+        
+        maven {
+            url 'http://oss.jfrog.org/artifactory/plugins-release'    
+        }
     }
 
     dependencies {
         classpath 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
+        classpath(group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '3.0.1')
     }
 }
 
@@ -125,3 +114,26 @@ dependencies {
     compile (group: 'org.antlr', name: 'antlr4', version: '4.2', classifier: 'sources')
 
 }
+
+artifactory {
+    contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
+    publish {
+        repository {
+            repoKey = 'oss-snapshot-local'
+            username = "turpid-monkey"
+            password = System.properties['bintrayKey']
+            maven = true
+        }
+        defaults {
+            publications ('mavenJava')
+        }
+    }
+    resolve {
+        repository {
+            repoKey = 'libs-release'
+            maven = true
+             
+        }
+    }
+}
+
