Fixed property name

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 env:
-  BINTRAYAPIKEY:
+  bintrayKey:
     secure: "WDFqZzHdGP6ROriHhHklI8OPuFKQfrtsyzmVzex2A0FoF81td20JoUpElnK8JyVLzIrI8/VronoUZB8gEHEmaNJbsO1pNqcndem4tMwJssCL+BjE7zKKKJScfdvK9KWCAfzYqsJIjilfIAAwr8GqjxT4hljpKTJLxoqRl0CeUCc="
 
 jdk:
