Fixed missing url.

--- a/build.gradle
+++ b/build.gradle
@@ -116,7 +116,7 @@ dependencies {
 }
 
 artifactory {
-    contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
+    contextUrl = "http://oss.jfrog.org/artifactory"   //The base Artifactory URL if not overridden by the publisher/resolver
     publish {
         repository {
             repoKey = 'oss-snapshot-local'
